all Problem tests and fixes